<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp_app_bar"
    tools:context="start_app.sc_login_pessoa_juridica">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/vamos_juntos_fazer_um_mundo_melhor"
            android:textColor="@color/black_200"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/et_email_pj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/e_mail"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingTop="8dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password_pj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bt_forgot_password_pj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/purple_500"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_login_pj"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/bt_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/cancelar"
            android:textColor="@color/pink_500" />

    </LinearLayout>

</FrameLayout>