<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp_theme_parcial_green"
    tools:context="inside_app.pessoa_juridica.sc_feed_pessoa_juridica">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/img_client"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo_havaianas" />

        <Button
            android:id="@+id/bt_see_your_event"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/bt_see_event_pj"
            android:textColor="@color/purple_700"/>

        <Button
            android:id="@+id/bt_see_suggestion_client"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/white"
            android:text="@string/bt_suggestion_event"
            android:textColor="@color/purple_700"/>

        <Button
            android:id="@+id/bt_add_new_event"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/bt_add_event"
            android:textColor="@color/white"/>


    </LinearLayout>
</FrameLayout>